<resources>
    <string name="app_name">Electricity Bill Estimator App</string>
        <string name="view_on_github">View on GitHub</string>
        <string name="github_url">https://github.com/muhdiqkfan/ElectricityBillEstimatorApp.git</string>
    <string name="saved_bills">Saved Bills</string>
    <string name="about">About</string>
    <string name="calculate">Calculate</string>
    <string name="view_history">View History</string>
    <string name="e_g_100">example : 100</string>
    <string name="select_month">Select Month:</string>
    <string name="select_rebate">Select Rebate (%):</string>
    <string name="enter_units_used_kwh">Enter Units Used (kWh):</string>
    <string name="total_charges_rm_0_00">Total Charges: RM 0.00</string>
    <string name="final_cost_after_rebate_rm_0_00">Final Charges After Rebate : RM 0.00</string>
    <string name="_0">0%</string>
    <string name="_1">1%</string>
    <string name="_2">2%</string>
    <string name="_3">3%</string>
    <string name="_4">4%</string>
    <string name="_5">5%</string>
    <string name="f_details">Click on below record to view full bill details</string>
    <string name="cp_right">© 2025 Muhammad Iqkfan bin Mohd Saha.</string>
    <string name="name">Name: Muhammad Iqkfan bin Mohd Saha</string>
    <string name="sid">Student ID: 2022654726</string>
    <string name="course">Course: ICT602 - Mobile Technology</string>
    <string name="icon">icon</string>
    <string name="icon1">icon</string>
    <string name="icon2">icon</string>
    <string name="icon3">icon</string>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="rebate_array">
        <item>0%</item>
        <item>1%</item>
        <item>2%</item>
        <item>3%</item>
        <item>4%</item>
        <item>5%</item>
    </string-array>

</resources>