<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_gradient"
    android:padding="24dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- FrameLayout with student info -->
        <FrameLayout
            android:id="@+id/infoFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:padding="16dp"
            android:background="@drawable/info_card_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon3"
                    android:src="@drawable/baseline_person_24"
                    android:layout_marginEnd="8dp"
                    app:tint="@android:color/black" />

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon1"
                    android:src="@drawable/assignment_ind_24px"
                    android:layout_marginEnd="8dp"
                    app:tint="@android:color/black" />
                <TextView
                    android:id="@+id/textId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sid"
                    android:textSize="18sp"
                    android:textStyle="bold" />
        </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon2"
                    android:src="@drawable/school_24px"
                    android:layout_marginEnd="8dp"
                    app:tint="@android:color/black" />

                <TextView
                    android:id="@+id/textCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/course"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
    </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <!-- Github link -->
        <TextView
            android:id="@+id/textGithub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:text="@string/view_on_github"
            android:textAlignment="center"
            android:textColor="#1565C0"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoFrame" />

        <!-- Copyright -->
        <TextView
            android:id="@+id/textCopyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cp_right"
            android:textColor="#37474F"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textGithub" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
