<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_gradient"
    android:padding="16dp"
    tools:ignore="VisualLintBounds">

    <ListView
        android:id="@+id/listViewHistory"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInstruction"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/saved_bills"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/textHeader"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/instructionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_details"
            android:textStyle="italic"
            android:textColor="#666666" />

        <ImageView
            android:id="@+id/iconInfo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/info_24px"
            android:layout_marginStart="8dp"
            app:tint="@android:color/darker_gray" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
